# rocketchat-ai-assistant

./: .gitignore  .gitmodules  LICENSE  README.md  channel_subscriber.py  main.py  pyproject.toml
utils/: config.py  http_utils.py  message_utils.py
